[package]
name = "freertos-sys2"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/junelife/freertos-sys2"
documentation = "https://docs.rs/freertos-sys2"
description = "Low-level bindings to FreeRTOS. User's responsibility to provide the FreeRTOS"

[features]
default = ["support_static_allocation", "support_dynamic_allocation"]
support_static_allocation = []
support_dynamic_allocation = []

[dependencies]
