[package]
name = "freertos-sys2"
version = "0.2.0"
edition = "2021"
authors = ["Alexey Gerasev <alexey.gerasev@gmail.com>"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/agerasev/freertos-sys3"
documentation = "https://docs.rs/freertos-sys3"
description = "Low-level bindings to FreeRTOS. User's responsibility to provide the FreeRTOS"

[features]
default = ["support_static_allocation", "support_dynamic_allocation"]
support_static_allocation = []
support_dynamic_allocation = []

[dependencies]
